assets/css/agency.scss
---
---
@charset "utf-8";
// Core variables and mixins
@import "base/variables.scss";
@import "base/mixins.scss";

// Custom Fonts
{% if site.data.style.fonts %}
  {% for font in site.data.style.fonts %}
    @mixin {{font.for}}-font {
      font-family: "{{ font.name }}", -apple-system, BlinkMacSystemFont, "Segoe UI",
      Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
      "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    }
  {% endfor %}
{% endif %}

// Custom colors
$primary: {{ site.data.style.highlight | default: "#eb7824" }} !default;
$white: {{ site.data.style.white | default: "#fff" }} !default;
$black: {{ site.data.style.black | default: "#000" }} !default;

// Custom Images
$header-image: "{{ site.data.style.header-image }}";
$contact-image: "{{ site.data.style.contact-image }}";

// Global CSS
@import "base/page.scss";

// Components
@import "components/buttons.scss";
@import "components/navbar.scss";
@import "components/client-scroll.scss";

// Layout
@import "layout/masthead.scss";
@import "layout/services.scss";
@import "layout/portfolio.scss";
@import "layout/timeline.scss";
@import "layout/team.scss";
@import "layout/contact.scss";
@import "layout/footer.scss";

// Speech Bubble Mobile Styling
.speech-bubble-container {
  @media (max-width: 768px) {
    flex-direction: column-reverse !important;
    align-items: center !important;
  }
}

